# HTML-to-Twig

./: README.md  pyproject.toml  requirements.txt
examples/: output.html.twig  output.html_report.txt  output.php  output_report.txt  sample.html
src/html2twig/: __init__.py  cli.py  converter.py  wordpress_converter.py
src/html2twig.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/html2twig/templates/: base.html.twig
tests/: __init__.py  test_converter.py
