[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "html2twig"
version = "1.0.0"
description = "CLI tool to convert HTML templates to Twig (Symfony) or WordPress PHP templates"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "HTML2Twig Contributors"}
]
keywords = ["html", "twig", "symfony", "wordpress", "converter", "template"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Text Processing :: Markup :: HTML",
]
dependencies = [
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "click>=8.1.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
]

[project.scripts]
html2twig = "html2twig.cli:main"

[project.urls]
Homepage = "https://github.com/Piqzaa/HTML-to-Twig"
Repository = "https://github.com/Piqzaa/HTML-to-Twig"
Issues = "https://github.com/Piqzaa/HTML-to-Twig/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
html2twig = ["templates/*.twig"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
